--- a/index.html
+++ b/index.html
@@ -5,20 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Jayson Rey Digang - Personal CV</title>
+    <style>
+        table{
+            border-collapse:separate ;
+            border-spacing: 0;
+        }
+
+
 </head>
 <body>
     <header>
-        <img src="profile.jpg" alt="Jayson Rey Digang profile photo">
+        <img src="image/profile.jpg" alt="Jayson Rey Digang profile photo">
         <h1>Jayson Rey Digang</h1>
         <p>College IT Student</p>
     </header>
 
     <nav>
         <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li>About</li>
+            <li>Skills</li>
+            <li>Education</li>
+            <li>Contact</li>
         </ul>
     </nav>
 
@@ -41,7 +48,8 @@
 
         <section id="education">
             <h2>Education</h2>
-            <table>
+            <table border="1">
+                
                 <tr>
                     <th>Level</th>
                     <th>Institution</th>
